# simple_tasker

./: .gitignore  README.md  blog.md  blog2.md  pyproject.toml  task.conf
simple_tasker/: __init__.py  cli.py
simple_tasker/tasks/: __init__.py  archive.py  shell_script.py
