[tool.poetry]
name = "simple_tasker"
version = "0.1.0"
description = ""
authors = ["Mark Stella <mark.p.stella@gmail.com>"]

[tool.poetry.scripts]
tasker = 'simple_tasker.cli:cli'

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.1"
pyhocon = "^0.3.57"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
